update to latest wfdb-swig version 10.5.0, based on link from pyhsionet website (https://www.physionet.org/physiotools/wfdb-swig.tar.gz)

--- a/wfdb-csharp/Makefile
+++ b/wfdb-csharp/Makefile
@@ -2,6 +2,7 @@
 
 all:
 	cp -pr conf build
+	cp -p ../common/* build
 	cp -p ../AUTHORS ../ChangeLog ../COPYING ../INSTALL ../NEWS ../README \
 	  build
 	swig -I/usr/include -csharp -namespace Wfdb -dllimport wfdbcsharpglue \
