--- a/wfdb-java/Makefile
+++ b/wfdb-java/Makefile
@@ -1,37 +1,30 @@
-# file: Makefile	G. Moody		11 March 2006
-#			last modified:		16 January 2013
-WFDB_HOME=/opt/wfdb
-WFDB_INCLUDE=$(WFDB_HOME)/include
-JAVAC=javac
-WFDB_LIBDIR=$(WFDB_HOME)/lib
-UNAME=$(shell uname)
+# file: Makefile	G. Moody		12 July 2011
 
-ifeq ($(UNAME), Linux)
-# check for 64-bit java in Linux
-ifeq ($(shell (java -d64 -version&>/dev/null; echo $$?)), 0)
-WFDB_LIBDIR=$(WFDB_HOME)/lib64
-endif
-endif
+WFDB_HOME=/usr/local
+WFDB_INCLUDE=$(WFDB_HOME)/include
+
+# Uncomment one of the next two lines:
+JAVAC=javac
+# JAVAC=gcj
 
 all:
 	rm -rf build
 	cp -pr conf build
 	cp -p ../AUTHORS ../ChangeLog ../COPYING ../INSTALL ../NEWS ../README \
 	  build
-	mkdir build/wfdb
 	swig -I$(WFDB_HOME)/include -java -package wfdb -outdir build/wfdb \
 	  -o build/wfdb_java_wrap.c ../wfdb.i
 	cd build; autoreconf -i
 	cd build; ./acgen.sh
-	cd build; ./configure JAVAC=$(JAVAC) CFLAGS="-O1 -I$(WFDB_INCLUDE) $(CFLAGS)" --build=$(TARGET) --prefix=$(WFDB_HOME) --libdir=$(WFDB_LIBDIR);
+	cd build; ./configure JAVAC=$(JAVAC) --build=$(TARGET) --prefix=$(WFDB_HOME) CFLAGS="-O1 -I$(WFDB_INCLUDE) $(CFLAGS)"
 	cd build; $(MAKE)
 
 install:
-	cd build; $cd (MAKE) install
+	cd build; $(MAKE) install
 
 check:
 	cp ../examples/*.java examples
-	cd examples; $(MAKE)
+	cd examples; $(MAKE) JAVAC=$(JAVAC)
 	@if [ -s examples/psamples ]; then examples/psamples >check.out; \
 	 else examples/jw examples/psamples >check.out; fi
 	@if ( diff -q check.out ../examples/psamples.out ) \
